--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
 
   <head>
-    <meta charset='utf-8'>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="description" content="Telephone-dial : Reproduction labels for rotary dial telephones">
-
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:700,700italic|Special+Elite" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+    <link rel="stylesheet" type="text/css" media="all" href="stylesheets/dial.css">
 
     <title>Telephone-dial</title>
   </head>
@@ -18,8 +19,8 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/going-digital/telephone-dial">View on GitHub</a>
 
-          <h1 id="project_title">Telephone-dial</h1>
-          <h2 id="project_tagline">Reproduction labels for rotary dial telephones</h2>
+          <h1 class="ui" id="project_title">Telephone-dial</h1>
+          <h2 class="ui" id="project_tagline">Reproduction labels for rotary dial telephones</h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/going-digital/telephone-dial/zipball/master">Download this project as a .zip file</a>
@@ -31,13 +32,20 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-
 <p>This generator creates customised printable labels for rotary telephones. It was designed to replicate the styling of GPO / BT telephones from the 1970s-1980s, particularly the 746 and 8746 telephone models.</p>
 
 <h3>
 <a id="whats-your-phone-number" class="anchor" href="#whats-your-phone-number" aria-hidden="true"><span class="octicon octicon-link"></span></a>What's your phone number?</h3>
+<p class="ui">
+  Exchange:
+  <input type="text" id="exchange" name="exchange" oninput="updateExchange()">
+  <br>
+  Number:
+  <input type="text" id="number" name="number" oninput="updateNumber()">
+  <br>
+</p>
+
+<svg class="dial"></svg>
 
 <h3>
 <a id="printing-labels" class="anchor" href="#printing-labels" aria-hidden="true"><span class="octicon octicon-link"></span></a>Printing labels</h3>
@@ -47,7 +55,7 @@
 <h3>
 <a id="author" class="anchor" href="#author" aria-hidden="true"><span class="octicon octicon-link"></span></a>Author</h3>
 
-<p>Designed by Peter Knight (<a href="https://github.com/going-digital" class="user-mention">@going-digital</a>). Fonts are Roboto by Christian Robertson, and Special Elite by Astigmatic.</p>
+<p>Designed by Peter Knight (<a href="https://github.com/going-digital" class="user-mention">@going-digital</a>). Fonts used are <a href="https://www.google.com/fonts/specimen/Roboto">Roboto by Christian Robertson</a>, and <a href="https://www.google.com/fonts/specimen/Special%20Elite">Special Elite by Astigmatic</a>.</p>
       </section>
     </div>
 
@@ -59,7 +67,8 @@
       </footer>
     </div>
 
-    
+    <script src="http://d3js.org/d3.v3.min.js"></script>
+    <script src="javascripts/main.js" charset="utf-8"></script>
 
   </body>
 </html>
